--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,11 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+
 p {
   font-size: 1rem;
   line-height: 1.6;
